--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URI = mongodb+srv://apo1:12345@cluster0.if5ccss.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI = mongodb+srv://<username><passaport>@cluster0.<>.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
